--- a/views/index/detail.html
+++ b/views/index/detail.html
@@ -38,16 +38,7 @@
 </ul>
 <div class="layui-layout layui-layout-admin" style="padding-left: 40px;margin-top: 20px;">
     <div class="layui-btn-container mw200">
-        {{if eq $.task.Status 2}}
-            <button lay-submit class="layui-btn  layui-btn-sm " lay-filter="audit">审核通过</button>
-            <button lay-submit class="layui-btn  layui-btn-sm layui-btn-danger" lay-filter="nopass">审核不通过</button>
-        {{end}}
-        {{if eq $.task.Status 1}}
-            <button lay-submit class="layui-btn  layui-btn-sm layui-btn-danger" lay-filter="pause">暂停任务</button>
-        {{end}}
-        {{if eq $.task.Status 0}}
-            <button lay-submit class="layui-btn  layui-btn-sm layui-btn-danger" lay-filter="start">启动任务</button>
-        {{end}}
+
 
         <button lay-submit class="layui-btn  layui-btn-sm " lay-filter="edit">编辑任务</button>
         <button lay-submit class="layui-btn  layui-btn-sm " lay-filter="run">测试执行</button>
@@ -58,7 +49,7 @@
 
     <div class="layui-layout layui-layout-admin" style="padding-left: 40px;margin-top: 20px;padding-right: 10px;">
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend>{{.task.TaskName}}（#{{.task.Id}}）任务详细</legend>
+            {{/*<legend>{{.task.TaskName}}（#{{.task.Id}}）任务详细</legend>*/}}
         </fieldset>
         <table class="layui-table" lay-skin="nob" lay-size="sm">
             <colgroup>
@@ -76,7 +67,6 @@
             </tr>
             <tr>
                 <td>任务状态</td>
-                <td>{{.TextStatus|str2html}}</td>
                 <td></td>
             </tr>
 
@@ -93,7 +83,6 @@
             </tr>
             <tr>
                 <td>执行资源</td>
-                <td>  {{str2html .serverName}}</td>
                 <td></td>
             </tr>
 
@@ -104,7 +93,6 @@
             </tr>
             <tr>
                 <td>是否单例</td>
-                <td>{{if eq .task.Concurrent 0}}是{{end}} {{if eq .task.Concurrent 1}}否{{end}}</td>
                 <td></td>
             </tr>
             <tr>
@@ -127,14 +115,11 @@
 
             <tr>
                 <td>出错通知</td>
-                <td>{{if eq .task.IsNotify 0}}否{{end}} {{if eq .task.IsNotify 1}}是{{end}}</td>
                 <td></td>
             </tr>
 
-            {{if eq .task.IsNotify 1}}
             <tr>
                 <td>通知类型</td>
-                <td>{{if eq .task.NotifyType 1}}短信{{end}} {{if eq .task.NotifyType 0}}邮件{{end}} {{if eq .task.NotifyType 2}}钉钉{{end}} {{if eq .task.NotifyType 3}}微信{{end}}</td>
                 <td></td>
             </tr>
 
@@ -154,7 +139,6 @@
                 <td></td>
             </tr>
 
-            {{end}}
 
             <tr>
                 <td>创建时间</td>
