--- a/views/index/list.html
+++ b/views/index/list.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>脚本列表</title>
     <link rel="stylesheet" type="text/css" href="../static/layui/css/layui.css" />
-
 </head>
 
 <body class="page-content-wrap">
@@ -102,7 +101,7 @@
             ,url: '/getlist'
             ,cols: [[
                 {checkbox: true, fixed: true},
-                {field:'id', title: 'ID', align:'center', width:80,sort: true}
+                {field:'Id', title: 'ID', align:'center', width:80,sort: true}
                 ,{field:'Command', title: '任务名称'}
                 ,{field:'CronSpec',title: '时间表达式', width:100}
                 ,{field:'CreateTime', width:170,title: '下次执行时间'}
@@ -126,7 +125,9 @@
         };
 
         $("#add").on("click",function() {
-            window.parent.openTab("/task/add",'新增任务',"admin_task_add-0",'fa-plus');
+            // window.parent.openTab("/create.html");
+            top.location.href="/create.html";
+
         })
 
         // form.on('select(select_group)', function(data){
@@ -137,14 +138,17 @@
         //监听工具条
         table.on('tool(table_filter)', function(obj){
             var data = obj.data;
-            var task_name = window.parent.delHtmlTag(data.task_name)
-            task_name = window.parent.getDelimiterLastString(task_name,"-")
+            // var task_name = window.parent.delHtmlTag(data.task_name)
+            // task_name = window.parent.getDelimiterLastString(task_name,"-")
             if(obj.event === 'edit'){
                 window.parent.openTab("/task/edit?id="+data.id,task_name+' 编辑',"admin_task_edit-"+data.id,'fa-edit');
             } else if(obj.event === 'log'){
                 window.parent.openTab("/tasklog/list?task_id="+data.id,task_name+'日志',"admin_log-"+data.id,'');
             }else if (obj.event==='detail'){
-                window.parent.openTab('/task/detail?id='+data.id,task_name+'详情',"admin_task_detail-"+data.id,'fa-folder-open-o');
+                // console.log(obj)
+                // layer.msg(data.Id, {icon: 1, shade: 0.4, time: 10000});
+
+                top.location.href='/detail?id='+data.Id;
             }else if (obj.event==='run'){
                 layer.confirm("测试执行任务，注意不要超时，请确认执行", {icon: 3, title:'提示'}, function(index){
                     layer.load();
