--- a/views/index/detail.html
+++ b/views/index/detail.html
@@ -209,7 +209,7 @@
 
                 layer.confirm("确认要删除这条任务吗？", {icon: 3, title:'提示'}, function(index){
                     layer.load();
-                    $.post('/task/ajaxdel', {id:id}, function (out) {
+                    $.post('/ajaxdel', {id:id}, function (out) {
 
                         if (out.status == 0) {
                             layer.msg("操作成功",{icon: 1,shade:0.3,time:1000},function () {
@@ -231,7 +231,7 @@
             }else if (event==='run'){
                 layer.confirm("测试执行任务，注意不要超时，请确认执行", {icon: 3, title:'提示'}, function(index){
                     layer.load();
-                    $.post('/task/ajaxrun', {id:id}, function (out) {
+                    $.post('/ajaxrun', {id:id}, function (out) {
                         if (out.status == 0) {
                             layer.msg("操作成功",{icon: 1,shade:0.3,time:1000},function () {
                                 window.parent.openTab("/tasklog/list?task_id="+id,task_name+' 日志',"admin_task_log-"+id,'');
