--- a/views/index/list.html
+++ b/views/index/list.html
@@ -152,10 +152,11 @@
             }else if (obj.event==='run'){
                 layer.confirm("测试执行任务，注意不要超时，请确认执行", {icon: 3, title:'提示'}, function(index){
                     layer.load();
-                    $.post('/task/ajaxrun', {id:data.id}, function (out) {
+                    $.post('/ajaxrun', {id:data.Id}, function (out) {
                         if (out.status == 0) {
                             layer.msg("操作成功",{icon: 1,shade:0.3,time:1000},function () {
-                                window.parent.openTab("/tasklog/list?task_id="+data.id,task_name+'运行日志',"admin_task_log-"+data.id,'');
+                                layer.msg(out.message)
+                                // window.parent.openTab("/tasklog/list?task_id="+data.id,task_name+'运行日志',"admin_task_log-"+data.id,'');
                             })
                         } else {
                             layer.msg(out.message)
