--- a/views/index/detail.html
+++ b/views/index/detail.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>table模块快速使用</title>
+    <title>scriptDetail</title>
     <link rel="stylesheet" type="text/css" href="../static/layui/css/layui.css" />
 </head>
 <body>
